# HalterLog

./: db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/models/: userModel.py
accounts/serializers/: __init__.py  authSerializer.py  userSerializer.py
accounts/views/: authView.py  userView.py
halterlog_api/: asgi.py  settings.py  urls.py  wsgi.py
workout/: admin.py  urls.py
workout/migrations/: 0001_initial.py  0002_serie_repeticoes.py  0003_rename_name_exercicio_nome.py  0004_sessaotreino_serieexecutada.py
workout/models/: __init__.py  exercicioModel.py  serieExecutadaModel.py  serieModel.py  sessaoTreinoModel.py  treinoModel.py
workout/serializers/: __init__.py  exercicioSerializer.py  seriaSerializer.py  serieExecutadaSerializer.py  serieSerializer.py  sessaoTreinoSerializer.py  treinoSerializer.py
workout/views/: __init__.py  exercicioView.py  serieExecutadaView.py  serieView.py  sessaoTreinoView.py  treinoView.py
